# product_details_reader_v2

./: .gitignore  cenums.py  constants.py  exceptions.py  main.py  my_types.py  output.py  processors.py  pyproject.toml  requirements.txt  ui.py
.github/workflows/: build.yml
